--- a/third/package.json
+++ b/third/package.json
@@ -14,8 +14,11 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.4",
+    "mongoose-aggregate-paginate-v2": "^1.0.7"
   }
 }
